# portkey-hackathon

./: .env.example  .gitignore  README.md  demo.html  presentation.html  pyproject.toml
analysis/: benchmark_to_csv.py
data/: external_deepset.jsonl  external_notinject.jsonl  synthetic_data.jsonl  test_notinject.jsonl  train_combined.jsonl  train_notinject.jsonl  val_notinject.jsonl
scripts/: download_external_benchmarks.py  finetune.py  generate_synthetic_data.py  inference.py  prepare_notinject_splits.py  test_portkey_byog.py
